<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/portada">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:hint="@string/Usuario"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoImageView"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="64dp"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@id/usernameEditText"
        app:layout_constraintEnd_toEndOf="@id/usernameEditText"
        app:layout_constraintTop_toBottomOf="@id/usernameEditText"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ingresar"
        app:layout_constraintStart_toStartOf="@id/usernameEditText"
        app:layout_constraintEnd_toEndOf="@id/usernameEditText"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        android:layout_marginTop="16dp"
        android:onClick="onLoginButtonClick"/>

    <TextView
        android:id="@+id/errorMessageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_message"
        android:textColor="#FF0000"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:layout_constraintStart_toStartOf="@id/loginButton"
        app:layout_constraintEnd_toEndOf="@id/loginButton"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/olvid_o_bloque_su_contrase_a"
        android:textColor="#090909"
        app:layout_constraintTop_toBottomOf="@id/errorMessageTextView"
        app:layout_constraintStart_toStartOf="@id/errorMessageTextView"
        app:layout_constraintEnd_toEndOf="@id/errorMessageTextView"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/footerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hecho_por_ike_asistencia"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
